@@ -230,7 +230,7 @@
   <!-- sign and deploy the main artifact -->
   <artifact:mvn>
    <arg
-    value="org.apache.maven.plugins:maven-gpg-plugin:1.1:sign-and-deploy-file" />
+    value="org.apache.maven.plugins:maven-gpg-plugin:1.4:sign-and-deploy-file" />
    <arg value="-Durl=${maven-repository-url}" />
    <arg value="-DrepositoryId=${maven-repository-id}" />
    <arg value="-DpomFile=pom.xml" />
@@ -240,7 +240,7 @@
 
   <!-- sign and deploy the sources artifact -->
   <artifact:mvn>
-   <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.1:sign-and-deploy-file" />
+   <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.4:sign-and-deploy-file" />
    <arg value="-Durl=${maven-repository-url}" />
    <arg value="-DrepositoryId=${maven-repository-id}" />
    <arg value="-DpomFile=pom.xml" />
@@ -251,7 +251,7 @@
 
   <!-- sign and deploy the javadoc artifact -->
   <artifact:mvn>
-   <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.1:sign-and-deploy-file" />
+   <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.4:sign-and-deploy-file" />
    <arg value="-Durl=${maven-repository-url}" />
    <arg value="-DrepositoryId=${maven-repository-id}" />
    <arg value="-DpomFile=pom.xml" />
