@@ -15,7 +15,7 @@
 
 
 name=apache-nutch
-version=2.2
+version=2.3-SNAPSHOT
 final.name=${name}-${version}
 year=2013
 
