@@ -1,5 +1,9 @@
 Nutch Change Log
 
+Current Development
+
+* NUTCH-
+
 Release 2.2 - 05/31/2013 (mm/yy/dddd)
 Jira Release Report - http://s.apache.org/LPB
 
